--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "firebase": "^7.14.0",
     "mdbreact": "^4.25.5",
     "react": "^16.13.1",
+    "react-datetime-picker": "^3.0.1",
     "react-dom": "^16.13.1",
     "react-router-config": "^5.1.1",
     "react-router-dom": "^5.1.2",
