--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "bootstrap": "^4.4.1",
     "dotenv": "^8.2.0",
     "firebase": "^7.14.0",
+    "jquery": "^3.5.0",
     "mdbreact": "^4.25.5",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.0.1",
+    "react-bootstrap-table-next": "^4.0.1",
     "react-datetime-picker": "^3.0.1",
     "react-dom": "^16.13.1",
     "react-router-config": "^5.1.1",
